Complete Introduction and Add content to Game of Life section

--- a/the_paper/introduction.tex
+++ b/the_paper/introduction.tex
@@ -1,4 +1,8 @@
 % Introduction
 
+In order to make modern parallel computing software efficient and powerful, we need to understand what are the underlying caveats that may slow the process down. There are various models proposed with the endavour to effectively describe the parallel system and yet simple enough to capture the essential factors that affect the perforamnce of the system in substantial degree. Each of the models is no better than the others but only is deemed most useful under suitable contexts. Through the performance analysis with the aid of these mathematical models, we can further find the bottlenecks that could be mitigated to optimize the communication perforamnce of the parallel system. 
 
+In this article, we will discuss the main parallel performance models, and through the benchmarking of the parallel version of Game of Life program, we can further utilize these models to evaluate the point-to-point and collective communication performances in the fashion of weak or strong scaling. 
+
+As per the summary, in section \ref{relatedWorks} we will discuss previous studies related to the topic of our discussion in this article. Section \ref{gol} we will give a brief introduction about Conway\'s Game of Life algorithm and how we modified it into its MPI-enabled parallel version. In section \ref{cuda} and \ref{mpi} we will present the hardware and frameworks we utilize to perform the benchmarking. More importantly, in section \ref{models} we will discuss the main performance models to describe parallel systems. The course of our discussion will culminate in the introduction of the performance metrics in section \ref{metrics} and the experiement results in section \ref{results}. Last but not least, we will finalize the article with a brief summary and propose prospective future works in section \ref{conclusion}.
 
