--- a/the_paper/main.tex
+++ b/the_paper/main.tex
@@ -101,38 +101,38 @@
 %% information and builds the first part of the formatted document.
 \maketitle
 
-\section{Introduction}
+\section{Introduction} \label{introduction}
 \input{introduction}
 
 
-\section{Related Works}
+\section{Related Works} \label{relatedWorks}
 \input{related_works}
 
-\section{Game of Life as an Algorithm}
+\section{Game of Life as an Algorithm} \label{gol}
 \input{game_of_life}
 
 
-\section{GPU and CUDA Toolkit}
+\section{GPU and CUDA Toolkit} \label{cuda}
 \input{gpu_and_cuda}
 
 
-\section{MPI}
+\section{MPI} \label{mpi}
 \input{mpi}
 
 
-\section{Models to describe the Parallel Systems}
+\section{Models to describe the Parallel Systems} \label{models}
 \input{parallel_models}
 
 
-\section{Perforamnce metrics}
+\section{Perforamnce metrics} \label{metrics}
 \input{experiment_results}
 
 
-\section{Performance Results}
+\section{Performance Results} \label{results}
 
 
 
-\section{Conclusion and Future works}
+\section{Conclusion and Future works} \label{conclusion}
 \input{conclusion}
 
 \section{Acknowledgments}
