--- a/the_paper/main.tex
+++ b/the_paper/main.tex
@@ -126,10 +126,11 @@
 
 \section{Perforamnce metrics} \label{metrics}
 \input{experiment_results}
+\input{metrics}
 
 
 \section{Performance Results} \label{results}
-
+\input{strong-weak-results}
 
 
 \section{Conclusion and Future works} \label{conclusion}
