Update performance metrics

--- a/the_paper/experiment_results.tex
+++ b/the_paper/experiment_results.tex
@@ -1,5 +1,9 @@
 % Experiment results
 
+For this experiment, the message size chanegs from 1 to 1024 by the power of two.
+And the rank number per node changes from 1 to 6 for up to two nodes.
+After the testing in different conditioins, it is found that the lantency of the network is almost static which is fixed around 0.004 ms.
+
 \begin{figure*}[h]
 \centering
 \hspace*{\fill}
