--- a/the_paper/main.tex
+++ b/the_paper/main.tex
@@ -125,11 +125,11 @@
 
 
 \section{Perforamnce metrics}
-\input{experiment_results}
+\input{performance_metrics}
 
 
 \section{Performance Results}
-
+\input{experiment_results}
 
 
 \section{Conclusion and Future works}
