--- a/the_paper/authors.tex
+++ b/the_paper/authors.tex
@@ -11,16 +11,16 @@
   \city{Troy}
   \state{NY, 12180}
 }
-\email{larst@affiliation.org}
+\email{sheny20@rpi.edu}
 
-\author{Jinqiang Jiang}
+\author{Jinqian Jiang}
 \affiliation{%
   \institution{Rensselaer Polytechnic Institute}
   \streetaddress{110 8th Street}
   \city{Troy}
   \state{NY, 12180}
 }
-\email{larst@affiliation.org}
+\email{jiangj7@rpi.edu}
 
 \author{Chau-Lin Huang}
 \affiliation{%
@@ -38,7 +38,7 @@
   \city{Troy}
   \state{NY, 12180}
 }
-\email{larst@affiliation.org}
+\email{blairl@rpi.edu}
 
 
 
